--- a/code/chap01ex.ipynb
+++ b/code/chap01ex.ipynb
@@ -622,11 +622,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0     4413\n",
+       "2.0     2874\n",
+       "3.0     1234\n",
+       "4.0      421\n",
+       "5.0      126\n",
+       "6.0       50\n",
+       "7.0       20\n",
+       "8.0        7\n",
+       "9.0        2\n",
+       "10.0       1\n",
+       "Name: birthord, dtype: int64"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "import nsfg\n",
+    "preg = nsfg.ReadFemPreg()\n",
+    "birthord = preg['birthord']\n",
+    "birthord.value_counts().sort_index()"
    ]
   },
   {
@@ -665,11 +689,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.series.Series"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "import nsfg\n",
+    "preg = nsfg.ReadFemPreg()\n",
+    "prglngth = preg['prglngth']\n",
+    "type(prglngth.value_counts())"
    ]
   },
   {
@@ -708,11 +746,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.302558389828803"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "import nsfg\n",
+    "preg = nsfg.ReadFemPreg()\n",
+    "preg['totalwgt_kg'] = preg.totalwgt_lb/2.2\n",
+    "preg.totalwgt_kg.mean()"
    ]
   },
   {
@@ -963,11 +1015,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15    217\n",
+       "16    223\n",
+       "17    234\n",
+       "18    235\n",
+       "19    241\n",
+       "20    258\n",
+       "21    267\n",
+       "22    287\n",
+       "23    282\n",
+       "24    269\n",
+       "25    267\n",
+       "26    260\n",
+       "27    255\n",
+       "28    252\n",
+       "29    262\n",
+       "30    292\n",
+       "31    278\n",
+       "32    273\n",
+       "33    257\n",
+       "34    255\n",
+       "35    262\n",
+       "36    266\n",
+       "37    271\n",
+       "38    256\n",
+       "39    215\n",
+       "40    256\n",
+       "41    250\n",
+       "42    215\n",
+       "43    253\n",
+       "44    235\n",
+       "Name: age_r, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "import nsfg\n",
+    "resp = nsfg.ReadFemResp()\n",
+    "resp['age_r'].value_counts().sort_index()"
    ]
   },
   {
@@ -1285,11 +1380,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1069    44\n",
+       "Name: age_r, dtype: int64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "import nsfg\n",
+    "resp = nsfg.ReadFemResp()\n",
+    "resp[resp.caseid==1].age_r"
    ]
   },
   {
@@ -1301,11 +1410,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2610    40\n",
+       "2611    36\n",
+       "2612    30\n",
+       "2613    40\n",
+       "Name: prglngth, dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "import nsfg\n",
+    "preg = nsfg.ReadFemPreg()\n",
+    "preg[preg.caseid==2298].prglngth"
    ]
   },
   {
@@ -1317,11 +1443,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5515    6.0\n",
+       "Name: birthwgt_lb, dtype: float64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "import nsfg\n",
+    "preg = nsfg.ReadFemPreg()\n",
+    "preg[preg.caseid==5012].birthwgt_lb"
    ]
   },
   {
@@ -1348,7 +1488,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
